# HomeworkInUSTC

./: D-aryHeapTest.c  Huffman.java  InvertedIndex.cpp  MaxSubarray.c  README.md  huffman.txt  lstmbeta.py  张劲暾的程序员学习笔记.md
CompilerHlab2/: CMakeLists.txt  fib-clang.ll  fib.c  fib.ll  gen_fib  gen_fib.cpp  llvm-ir_learning.md  llvm-irgen-example  llvm-irgen-example.cpp  llvm-irgen-example.ll  myout.ll
DBWorldSearchEngin/SearchEnginZJT/: .classpath  .project
Dirichlet/: # 文献调研：隐含狄利克雷分布（Latent Dirichlet Allocation）.md
Guass_Seidel & SOR/: Guass_Seidel.m  SOR.m
HW/H1/: answer.md
HW/H1/C/: answer.md  (+8 more)
JavaLab1-PB16111485-张劲暾/: WordPuzzle.java  readme.md
Lagrangian interpolation/: lagrange.m  readme.md  test.m  test_function.m
LeastSquare/: LeastSquare.m
NewtonIter/: NewtonIter.m  secant.m  test_function.m
PB16111485-project1/doc/: PB16111485-project1.odt  PB16111485-张劲暾-project1.rar  failedRadixSort.c  input_integer.py  project1plot.py
PB16111485-project2/doc/: PB16111485-project2.odt  PB16111485-张劲暾-project2.rar  input_integer.py  project2plot.py  random_string.py
RandomPeocess2018/: lll.tex  week16homework.tex
Runge_Kutta & Adams/: Adams.m  Runge_Kutta.m  f.m
Series summation/: readme.md  series_count.m  test.m
Simpson/: Simpson.m  Trapezoidal.m  test_function.m
c1interpreter/: sample.ll
c1recognizer/: mes
jacobi/: jacobi.m
lab/: lab1.asm  lab2-test.asm  lab2.asm  lab3.asm  lab4-simple.asm  lab4.asm
lab1-answer/: 3-ATN.dot  3-DFA.dot  DFA.dot  lab1-2.md  testgra.dot
row_pivoting_gaussian_elimination/: row_pivoting_gaussian_elimination.m
(+230 files in other folders)
